--- a/src/src/Dotnet9.Application.Contracts/Dotnet9.Application.Contracts.csproj
+++ b/src/src/Dotnet9.Application.Contracts/Dotnet9.Application.Contracts.csproj
@@ -12,13 +12,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.ObjectExtending" Version="5.0.0" />
-    <PackageReference Include="Volo.Abp.Account.Application.Contracts" Version="5.0.0" />
-    <PackageReference Include="Volo.Abp.Identity.Application.Contracts" Version="5.0.0" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.Application.Contracts" Version="5.0.0" />
-    <PackageReference Include="Volo.Abp.TenantManagement.Application.Contracts" Version="5.0.0" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.Application.Contracts" Version="5.0.0" />
-    <PackageReference Include="Volo.Abp.SettingManagement.Application.Contracts" Version="5.0.0" />
+    <PackageReference Include="Volo.Abp.ObjectExtending" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.Account.Application.Contracts" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.Identity.Application.Contracts" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.Application.Contracts" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.TenantManagement.Application.Contracts" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.Application.Contracts" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.SettingManagement.Application.Contracts" Version="5.0.1" />
+    <PackageReference Include="Volo.CmsKit.Application.Contracts" Version="5.0.1" />
   </ItemGroup>
 
 </Project>
