--- a/src/src/Dotnet9.Application/Dotnet9.Application.csproj
+++ b/src/src/Dotnet9.Application/Dotnet9.Application.csproj
@@ -13,12 +13,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Account.Application" Version="5.0.0" />
-    <PackageReference Include="Volo.Abp.Identity.Application" Version="5.0.0" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="5.0.0" />
-    <PackageReference Include="Volo.Abp.TenantManagement.Application" Version="5.0.0" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.Application" Version="5.0.0" />
-    <PackageReference Include="Volo.Abp.SettingManagement.Application" Version="5.0.0" />
+    <PackageReference Include="Volo.Abp.Account.Application" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.Identity.Application" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.TenantManagement.Application" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.Application" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.SettingManagement.Application" Version="5.0.1" />
+    <PackageReference Include="Volo.CmsKit.Application" Version="5.0.1" />
   </ItemGroup>
 
 </Project>
