--- a/src/src/Dotnet9.Blazor/Dotnet9.Blazor.csproj
+++ b/src/src/Dotnet9.Blazor/Dotnet9.Blazor.csproj
@@ -13,26 +13,27 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Blazorise.Bootstrap5" Version="0.9.5" />
-    <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.9.5" />
+    <PackageReference Include="Blazorise.Bootstrap5" Version="0.9.5.3" />
+    <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.9.5.3" />
     <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
     <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
+    <PackageReference Include="Volo.CmsKit.Web" Version="5.0.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Dotnet9.Application\Dotnet9.Application.csproj" />
     <ProjectReference Include="..\Dotnet9.HttpApi\Dotnet9.HttpApi.csproj" />
     <ProjectReference Include="..\Dotnet9.EntityFrameworkCore\Dotnet9.EntityFrameworkCore.csproj" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="5.0.0" />
-    <PackageReference Include="Volo.Abp.Autofac" Version="5.0.0" />
-    <PackageReference Include="Volo.Abp.Swashbuckle" Version="5.0.0" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Authentication.JwtBearer" Version="5.0.0" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="5.0.0" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Components.Server.BasicTheme" Version="5.0.0" />
-    <PackageReference Include="Volo.Abp.Account.Web.IdentityServer" Version="5.0.0" />
-    <PackageReference Include="Volo.Abp.Identity.Blazor.Server" Version="5.0.0" />
-    <PackageReference Include="Volo.Abp.TenantManagement.Blazor.Server" Version="5.0.0" />
-    <PackageReference Include="Volo.Abp.SettingManagement.Blazor.Server" Version="5.0.0" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.Autofac" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.Swashbuckle" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Authentication.JwtBearer" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Components.Server.BasicTheme" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.Account.Web.IdentityServer" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.Identity.Blazor.Server" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.TenantManagement.Blazor.Server" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.SettingManagement.Blazor.Server" Version="5.0.1" />
   </ItemGroup>
 
   <ItemGroup>
