--- a/src/src/Dotnet9.Blazor/package.json
+++ b/src/src/Dotnet9.Blazor/package.json
@@ -3,7 +3,8 @@
   "name": "my-app",
   "private": true,
   "dependencies": {
+    "@abp/aspnetcore.components.server.basictheme": "^5.0.0",
     "@abp/aspnetcore.mvc.ui.theme.basic": "^5.0.0",
-    "@abp/aspnetcore.components.server.basictheme": "^5.0.0"
+    "@abp/cms-kit": "5.0.0"
   }
 }
