--- a/src/src/Dotnet9.Domain.Shared/Dotnet9.Domain.Shared.csproj
+++ b/src/src/Dotnet9.Domain.Shared/Dotnet9.Domain.Shared.csproj
@@ -9,14 +9,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Identity.Domain.Shared" Version="5.0.0" />
-    <PackageReference Include="Volo.Abp.IdentityServer.Domain.Shared" Version="5.0.0" />
-    <PackageReference Include="Volo.Abp.BackgroundJobs.Domain.Shared" Version="5.0.0" />
-    <PackageReference Include="Volo.Abp.AuditLogging.Domain.Shared" Version="5.0.0" />
-    <PackageReference Include="Volo.Abp.TenantManagement.Domain.Shared" Version="5.0.0" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.Domain.Shared" Version="5.0.0" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Shared" Version="5.0.0" />
-    <PackageReference Include="Volo.Abp.SettingManagement.Domain.Shared" Version="5.0.0" />
+    <PackageReference Include="Volo.Abp.Identity.Domain.Shared" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.IdentityServer.Domain.Shared" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.BackgroundJobs.Domain.Shared" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.AuditLogging.Domain.Shared" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.TenantManagement.Domain.Shared" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.Domain.Shared" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Shared" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.SettingManagement.Domain.Shared" Version="5.0.1" />
+    <PackageReference Include="Volo.CmsKit.Domain.Shared" Version="5.0.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -25,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="6.0.1" />
   </ItemGroup>
 
 </Project>
