--- a/src/src/Dotnet9.Domain/Dotnet9.Domain.csproj
+++ b/src/src/Dotnet9.Domain/Dotnet9.Domain.csproj
@@ -12,16 +12,19 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Emailing" Version="5.0.0" />
-    <PackageReference Include="Volo.Abp.Identity.Domain" Version="5.0.0" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Identity" Version="5.0.0" />
-    <PackageReference Include="Volo.Abp.IdentityServer.Domain" Version="5.0.0" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.Domain.IdentityServer" Version="5.0.0" />
-    <PackageReference Include="Volo.Abp.BackgroundJobs.Domain" Version="5.0.0" />
-    <PackageReference Include="Volo.Abp.AuditLogging.Domain" Version="5.0.0" />
-    <PackageReference Include="Volo.Abp.TenantManagement.Domain" Version="5.0.0" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.Domain" Version="5.0.0" />
-    <PackageReference Include="Volo.Abp.SettingManagement.Domain" Version="5.0.0" />
+    <PackageReference Include="EasyAbp.Abp.BlobStoring.TencentCloud" Version="1.2.1" />
+    <PackageReference Include="Volo.Abp.BlobStoring" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.Emailing" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.Identity.Domain" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Identity" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.IdentityServer.Domain" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.Domain.IdentityServer" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.BackgroundJobs.Domain" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.AuditLogging.Domain" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.TenantManagement.Domain" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.Domain" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.SettingManagement.Domain" Version="5.0.1" />
+    <PackageReference Include="Volo.CmsKit.Domain" Version="5.0.1" />
   </ItemGroup>
 
 </Project>
