--- a/src/src/Dotnet9.HttpApi/Dotnet9.HttpApi.csproj
+++ b/src/src/Dotnet9.HttpApi/Dotnet9.HttpApi.csproj
@@ -12,12 +12,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Account.HttpApi" Version="5.0.0" />
-    <PackageReference Include="Volo.Abp.Identity.HttpApi" Version="5.0.0" />
-    <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi" Version="5.0.0" />
-    <PackageReference Include="Volo.Abp.TenantManagement.HttpApi" Version="5.0.0" />
-    <PackageReference Include="Volo.Abp.FeatureManagement.HttpApi" Version="5.0.0" />
-    <PackageReference Include="Volo.Abp.SettingManagement.HttpApi" Version="5.0.0" />
+    <PackageReference Include="Volo.Abp.Account.HttpApi" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.Identity.HttpApi" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.PermissionManagement.HttpApi" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.TenantManagement.HttpApi" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.FeatureManagement.HttpApi" Version="5.0.1" />
+    <PackageReference Include="Volo.Abp.SettingManagement.HttpApi" Version="5.0.1" />
+    <PackageReference Include="Volo.CmsKit.HttpApi" Version="5.0.1" />
   </ItemGroup>
 
 </Project>
