--- a/src/src/Dotnet9.Blazor/appsettings.json
+++ b/src/src/Dotnet9.Blazor/appsettings.json
@@ -11,6 +11,6 @@
     "RequireHttpsMetadata": "false"
   },
   "StringEncryption": {
-    "DefaultPassPhrase": "hB2I6h9GoFVGDD6U"
+    "DefaultPassPhrase": "QEmgyoN8S9gEfBn5"
   }
 }
