--- a/src/src/Dotnet9.EntityFrameworkCore/Dotnet9.EntityFrameworkCore.csproj
+++ b/src/src/Dotnet9.EntityFrameworkCore/Dotnet9.EntityFrameworkCore.csproj
@@ -21,9 +21,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.1">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-      <PrivateAssets>compile; build; native; contentfiles; analyzers; buildtransitive</PrivateAssets>
+      <PrivateAssets>compile; contentFiles; build; buildMultitargeting; buildTransitive; analyzers; native</PrivateAssets>
     </PackageReference>
   </ItemGroup>
 
