--- a/src/src/Dotnet9.Domain/Dotnet9.Domain.csproj
+++ b/src/src/Dotnet9.Domain/Dotnet9.Domain.csproj
@@ -8,10 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Dotnet9.Abp.BlobStoring.TencentCloud\Dotnet9.Abp.BlobStoring.TencentCloud.csproj" />
     <ProjectReference Include="..\Dotnet9.Domain.Shared\Dotnet9.Domain.Shared.csproj" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Volo.Abp.BlobStoring" Version="5.0.1" />
     <PackageReference Include="Volo.Abp.Emailing" Version="5.0.1" />
     <PackageReference Include="Volo.Abp.Identity.Domain" Version="5.0.1" />
     <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Identity" Version="5.0.1" />
