--- a/src/src/Dotnet9.Domain/Dotnet9.Domain.csproj
+++ b/src/src/Dotnet9.Domain/Dotnet9.Domain.csproj
@@ -13,6 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Slugify.Core" Version="3.0.0" />
+    <PackageReference Include="Unidecode.NET" Version="2.1.0" />
     <PackageReference Include="Volo.Abp.BlobStoring" Version="5.0.1" />
     <PackageReference Include="Volo.Abp.Emailing" Version="5.0.1" />
     <PackageReference Include="Volo.Abp.Identity.Domain" Version="5.0.1" />
