--- a/src/src/Dotnet9.Blazor/Properties/launchSettings.json
+++ b/src/src/Dotnet9.Blazor/Properties/launchSettings.json
@@ -21,6 +21,13 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "publishAllPorts": true,
+      "useSSL": true
     }
   }
 }
