--- a/src/src/Dotnet9.Blazor/Dotnet9.Blazor.csproj
+++ b/src/src/Dotnet9.Blazor/Dotnet9.Blazor.csproj
@@ -62,4 +62,9 @@
     <Folder Include="wwwroot\libs\easymde\dist\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="wwwroot\libs\highlightjs\highlight.pack.js" />
+    <None Include="wwwroot\libs\highlightjs\LICENSE" />
+  </ItemGroup>
+
 </Project>
