--- a/src/src/Dotnet9.DbMigrator/appsettings.json
+++ b/src/src/Dotnet9.DbMigrator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=Dotnet9;Trusted_Connection=True"
+    "Default": "server=39.100.141.156;user=dotnet9_com;database=dotnet9_com;port=3306;password=brxm8ASXnehx4Gx8;SslMode=None"
   },
   "IdentityServer": {
     "Clients": {
