--- a/src/Dotnet9.csproj
+++ b/src/Dotnet9.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MASA.Blazor" Version="0.2.10245" />
+  </ItemGroup>
+
 </Project>
