--- a/src/Dotnet9.API/Dotnet9.API/appsettings.json
+++ b/src/Dotnet9.API/Dotnet9.API/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Audience": {
+    "Secret": "sdflkjl2359879dglkjsaf987932423234df",
+    "Issuer": "Dotnet9.API",
+    "Audience": "wr"
+  },
   "AllowedHosts": "*"
 }
