--- a/src/Dotnet9.API/Dotnet9.IRepositories/Dotnet9.IRepositories.csproj
+++ b/src/Dotnet9.API/Dotnet9.IRepositories/Dotnet9.IRepositories.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Dotnet9.Models\Dotnet9.Models.csproj" />
+  </ItemGroup>
+
 </Project>
