--- a/src/Dotnet9.API/Dotnet9.Models/Dotnet9.Models.csproj
+++ b/src/Dotnet9.API/Dotnet9.Models/Dotnet9.Models.csproj
@@ -16,4 +16,10 @@
     <NoWarn>1701;1702;1591</NoWarn>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Update="Dotnet9.Models.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
