--- a/src/Dotnet9.API/Dotnet9.API/Dotnet9.API.csproj
+++ b/src/Dotnet9.API/Dotnet9.API/Dotnet9.API.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="7.0.2" />
   </ItemGroup>
 
   <ItemGroup>
