--- a/src/Dotnet9.API/Dotnet9.API/Properties/launchSettings.json
+++ b/src/Dotnet9.API/Dotnet9.API/Properties/launchSettings.json
@@ -7,7 +7,7 @@
       "launchBrowser": true,
       "applicationUrl": "http://localhost:5101",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Production"
       }
     }
   }
