--- a/src/Dotnet9.API/Dotnet9.IRepositories/Dotnet9.IRepositories.csproj
+++ b/src/Dotnet9.API/Dotnet9.IRepositories/Dotnet9.IRepositories.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
+	  <AppendTargetFrameworkToOutputPath>Flase</AppendTargetFrameworkToOutputPath>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
