--- a/src/Dotnet9.API/Dotnet9.Repositories/Dotnet9.Repositories.csproj
+++ b/src/Dotnet9.API/Dotnet9.Repositories/Dotnet9.Repositories.csproj
@@ -1,13 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net7.0</TargetFramework>
+		<AppendTargetFrameworkToOutputPath>Flase</AppendTargetFrameworkToOutputPath>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<BaseOutputPath>..\Dotnet9.API\bin\</BaseOutputPath>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Dotnet9.IRepositories\Dotnet9.IRepositories.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		    <ProjectReference Include="..\Dotnet9.EntityFramework\Dotnet9.EntityFramework.csproj" />
+<ProjectReference Include="..\Dotnet9.IRepositories\Dotnet9.IRepositories.csproj" />
+	</ItemGroup>
 
 </Project>
