add other model crud;

--- a/.gitignore
+++ b/.gitignore
@@ -351,3 +351,4 @@ MigrationBackup/
 *.jwk
 src/src/Dotnet9.EntityFrameworkCore/Migrations/
 src/Dotnet9.API/Dotnet9.API/appsettings.Production.json
+src/Dotnet9.API/Dotnet9.EntityFramework/Migrations/
