--- a/src/Dotnet9.API/Dotnet9.API/appsettings.Development.json
+++ b/src/Dotnet9.API/Dotnet9.API/appsettings.Development.json
@@ -6,6 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=14.120.11.16;user=dotnet9_test;database=dotnet9_test;port=3306;password=arx18f6hna374ah24Gx4;SslMode=None"
+    "DefaultConnection":
+      "server=14.120.11.16;user=dotnet9_test;database=dotnet9_test;port=3306;password=arx18f6hna374ah24Gx4;SslMode=None"
   }
 }
