--- a/src/Dotnet9.API/Dotnet9.EntityFramework/Dotnet9.EntityFramework.csproj
+++ b/src/Dotnet9.API/Dotnet9.EntityFramework/Dotnet9.EntityFramework.csproj
@@ -9,12 +9,12 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.1" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="6.0.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.1">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.1" />
-		<PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.15" />
 	</ItemGroup>
 
 	<ItemGroup>
