--- a/src/Dotnet9.API/Dotnet9.Extensions/Dotnet9.Extensions.csproj
+++ b/src/Dotnet9.API/Dotnet9.Extensions/Dotnet9.Extensions.csproj
@@ -10,13 +10,15 @@
   <ItemGroup>
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.2.0" />
     <PackageReference Include="Autofac.Extras.DynamicProxy" Version="6.0.0" />
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Dotnet9.Common\Dotnet9.Common.csproj" />
     <ProjectReference Include="..\Dotnet9.EntityFramework\Dotnet9.EntityFramework.csproj" />
-    <ProjectReference Include="..\Dotnet9.IRepositories\Dotnet9.IRepositories.csproj" />
-    <ProjectReference Include="..\Dotnet9.IServices\Dotnet9.IServices.csproj" />
+    <ProjectReference Include="..\Dotnet9.Repositories\Dotnet9.Repositories.csproj" />
+    <ProjectReference Include="..\Dotnet9.Services\Dotnet9.Services.csproj" />
   </ItemGroup>
 
 </Project>
