add aop and memorycache;

--- a/src/Dotnet9.API/Dotnet9.API/appsettings.json
+++ b/src/Dotnet9.API/Dotnet9.API/appsettings.json
@@ -10,5 +10,13 @@
     "Issuer": "Dotnet9.API",
     "Audience": "wr"
   },
+  "AppSettings": {
+    "MemoryCachingAOP": {
+      "Enabled": false
+    },
+    "LogAOP": {
+      "Enabled": true
+    }
+  },
   "AllowedHosts": "*"
 }
