--- a/src/Dotnet9.API/Dotnet9.Extensions/Dotnet9.Extensions.csproj
+++ b/src/Dotnet9.API/Dotnet9.Extensions/Dotnet9.Extensions.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="6.3.0" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.2.0" />
     <PackageReference Include="Autofac.Extras.DynamicProxy" Version="6.0.0" />
     <PackageReference Include="AutoMapper" Version="11.0.1" />
