--- a/src/Dotnet9.Tools/Dotnet9.Tools.csproj
+++ b/src/Dotnet9.Tools/Dotnet9.Tools.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Data\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MASA.Blazor" Version="0.3.0-rc.28" />
+  </ItemGroup>
+
 </Project>
