--- a/src/Dotnet9.Tools/Dotnet9.Tools.csproj
+++ b/src/Dotnet9.Tools/Dotnet9.Tools.csproj
@@ -1,17 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Data\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="MASA.Blazor" Version="0.3.0-rc.28" />
+    <PackageReference Include="System.Drawing.Common" Version="7.0.0-preview.1.22076.8" />
   </ItemGroup>
 
 </Project>
