--- a/src/Dotnet9.Tools.Web/Dotnet9.Tools.Web.csproj
+++ b/src/Dotnet9.Tools.Web/Dotnet9.Tools.Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -7,15 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-<<<<<<< HEAD
-    <PackageReference Include="MASA.Blazor" Version="0.2.10628" />
-=======
     <Folder Include="Data\" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="MASA.Blazor" Version="0.3.0-rc.28" />
->>>>>>> parent of b1dd94d (Add ICO converter translation;)
+    <PackageReference Include="MASA.Blazor" Version="0.2.10628" />
   </ItemGroup>
 
   <ItemGroup>
