--- a/src/Dotnet9.Tools.Web/Dotnet9.Tools.Web.csproj
+++ b/src/Dotnet9.Tools.Web/Dotnet9.Tools.Web.csproj
@@ -1,17 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net7.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<UseRazorSourceGenerator>false</UseRazorSourceGenerator>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="MASA.Blazor" Version="0.2.10628" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="MASA.Blazor" Version="0.3.0" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Dotnet9.Tools\Dotnet9.Tools.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Dotnet9.Tools\Dotnet9.Tools.csproj" />
+	</ItemGroup>
 
 </Project>
