--- a/src/Dotnet9.Tools.Web/Dotnet9.Tools.Web.csproj
+++ b/src/Dotnet9.Tools.Web/Dotnet9.Tools.Web.csproj
@@ -8,11 +8,19 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="BlazorMarkdown" Version="1.0.0" />
+		<PackageReference Include="HtmlSanitizer" Version="7.1.488" />
 		<PackageReference Include="MASA.Blazor" Version="0.3.0" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\Dotnet9.Tools\Dotnet9.Tools.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Content Update="wwwroot\2022\02\2022-02-22_02.md">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </Content>
 	</ItemGroup>
 
 </Project>
