udpate source file path config;

--- a/src/Dotnet9.Tools.Web/appsettings.json
+++ b/src/Dotnet9.Tools.Web/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Resource": "F:\\github_gitee\\Assets.D9Tools"
 }
