--- a/src/Dotnet9.Tools.Web/Dotnet9.Tools.Web.csproj
+++ b/src/Dotnet9.Tools.Web/Dotnet9.Tools.Web.csproj
@@ -4,11 +4,11 @@
 		<TargetFramework>net7.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
-		<UseRazorSourceGenerator>false</UseRazorSourceGenerator>
+		<!--<UseRazorSourceGenerator>false</UseRazorSourceGenerator>-->
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Markdig" Version="0.27.0" />
+		<PackageReference Include="Markdig" Version="0.28.0" />
 		<PackageReference Include="MASA.Blazor" Version="0.3.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 	</ItemGroup>
