remove config of development and production;

--- a/src/Dotnet9.Web/appsettings.json
+++ b/src/Dotnet9.Web/appsettings.json
@@ -7,5 +7,5 @@
   },
   "AllowedHosts": "*",
   "AssetsLocalPath": "F:\\github_gitee\\Assets.Dotnet9",
-  "AssetsRemotePath": "https://img1.Dotnet9.com"
+  "AssetsRemotePath": "https://img1.dotnet9.com"
 }
