--- a/.gitignore
+++ b/.gitignore
@@ -350,3 +350,5 @@ MigrationBackup/
 .ionide/
 *.jwk
 src/Dotnet9.EntityFrameworkCore/Migrations/
+src/Dotnet9.Web/appsettings.Development.json
+src/Dotnet9.Web/appsettings.Production.json
