--- a/src/Dotnet9.Web/Dotnet9.Web.csproj
+++ b/src/Dotnet9.Web/Dotnet9.Web.csproj
@@ -12,6 +12,7 @@
 	    <PrivateAssets>all</PrivateAssets>
 	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	  </PackageReference>
+	  <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.0-preview.1.22116.2" />
 	</ItemGroup>
 	
 	<ItemGroup>
