add docker support;

--- a/src/Dotnet9.Web/Properties/launchSettings.json
+++ b/src/Dotnet9.Web/Properties/launchSettings.json
@@ -1,13 +1,19 @@
-﻿{
+{
   "profiles": {
     "Dotnet9.Web": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5133",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:5133",
+      "dotnetRunMessages": true
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "publishAllPorts": true
     }
   }
 }
