--- a/.gitignore
+++ b/.gitignore
@@ -351,3 +351,4 @@ MigrationBackup/
 *.jwk
 src/Dotnet9.Web/appsettings.Development.json
 src/Dotnet9.Web/appsettings.Production.json
+src/Dotnet9.Web/sitemap.xml
