--- a/src/Dotnet9.Web/Dotnet9.Web.csproj
+++ b/src/Dotnet9.Web/Dotnet9.Web.csproj
@@ -13,6 +13,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="AspNetCore.SEOHelper" Version="1.0.1" />
 	  <PackageReference Include="Markdig" Version="0.28.1" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.0-preview.2.22153.1">
 	    <PrivateAssets>all</PrivateAssets>
