--- a/src/Dotnet9.Web/Dotnet9.Web.csproj
+++ b/src/Dotnet9.Web/Dotnet9.Web.csproj
@@ -18,8 +18,10 @@
 	    <PrivateAssets>all</PrivateAssets>
 	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	  </PackageReference>
+	  <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="6.0.3" />
 	  <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.15.0" />
 	  <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.0-preview.1.22116.2" />
+	  <PackageReference Include="StackExchange.Redis" Version="2.5.61" />
 	</ItemGroup>
 	
 	<ItemGroup>
