--- a/src/Dotnet9.Web/appsettings.json
+++ b/src/Dotnet9.Web/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "SiteDomain": "https://dotnet9.com",
   "AssetsLocalPath": "F:\\github_gitee\\Assets.Dotnet9",
-  "AssetsRemotePath": "https://img1.dotnet9.com"
+  "AssetsRemotePath": "https://img1.dotnet9.com",
+  "Cache": {
+    "IsRedis": true,
+    "InstanceName": "db0",
+    "RedisConnection": "127.0.0.1:6379,password=,connectTimeout=4000,connectRetry=1,syncTimeout=1000"
+  }
 }
