Downgrade EF core version;

--- a/src/Dotnet9.Web/Dotnet9.Web.csproj
+++ b/src/Dotnet9.Web/Dotnet9.Web.csproj
@@ -29,11 +29,11 @@
 
 	<ItemGroup>
 	  <PackageReference Include="Markdig" Version="0.28.1" />
-	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.0-preview.3.22175.1">
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.4">
 	    <PrivateAssets>all</PrivateAssets>
 	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	  </PackageReference>
-	  <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.0-preview.3.22175.1">
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.4">
 	    <PrivateAssets>all</PrivateAssets>
 	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	  </PackageReference>
