update check logon api;

--- a/.gitignore
+++ b/.gitignore
@@ -353,3 +353,4 @@ src/Dotnet9.Web/appsettings.Development.json
 src/Dotnet9.Web/appsettings.Production.json
 src/Dotnet9.Web/sitemap.xml
 src/Dotnet9.EntityFrameworkCore/Migrations/
+src/Dotnet9.Admin/package-lock.json
