fix vite build config;

--- a/src/Dotnet9.Admin/package.json
+++ b/src/Dotnet9.Admin/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit --skipLibCheck && vite build --base=/admin",
+    "build": "vue-tsc --noEmit --skipLibCheck && vite build --base=/",
     "serve": "vite preview"
   },
   "dependencies": {
