--- a/.gitignore
+++ b/.gitignore
@@ -354,4 +354,4 @@ src/Dotnet9.Web/appsettings.Production.json
 src/Dotnet9.Web/sitemap.xml
 src/Dotnet9.EntityFrameworkCore/Migrations/
 src/Dotnet9.Admin/package-lock.json
-src/Dotnet9.Web/wwwroot/admin/
+src/Dotnet9.Admin/build/
