maui添加Masa.Blazor引用，程序暂时未能正常运行；

--- a/src/Dotnet9.Admin/Dotnet9.Admin.csproj
+++ b/src/Dotnet9.Admin/Dotnet9.Admin.csproj
@@ -49,4 +49,8 @@
 		<MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="Masa.Blazor" Version="0.5.0-preview.2" />
+	</ItemGroup>
+
 </Project>
