三个后台项目共用一个razor UI类库成功；

--- a/src/Dotnet9.MAUI/Dotnet9.MAUI.csproj
+++ b/src/Dotnet9.MAUI/Dotnet9.MAUI.csproj
@@ -49,4 +49,8 @@
 		<MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\Dotnet9.WebApp\Dotnet9.WebApp.csproj" />
+	</ItemGroup>
+
 </Project>
