--- a/src/Dotnet9.Server/Dotnet9.Server.csproj
+++ b/src/Dotnet9.Server/Dotnet9.Server.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Dotnet9.WebApp\Dotnet9.WebApp.csproj" />
+  </ItemGroup>
+
 </Project>
