--- a/src/Dotnet9.Wasm/Dotnet9.Wasm.csproj
+++ b/src/Dotnet9.Wasm/Dotnet9.Wasm.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.5" PrivateAssets="all" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Dotnet9.WebApp\Dotnet9.WebApp.csproj" />
+  </ItemGroup>
+
 </Project>
