添加masa布局测试；

--- a/src/Dotnet9.WebApp/Dotnet9.WebApp.csproj
+++ b/src/Dotnet9.WebApp/Dotnet9.WebApp.csproj
@@ -6,6 +6,13 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Extensions\**" />
+    <Content Remove="Extensions\**" />
+    <EmbeddedResource Remove="Extensions\**" />
+    <None Remove="Extensions\**" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <SupportedPlatform Include="browser" />
@@ -14,10 +21,6 @@
   <ItemGroup>
     <PackageReference Include="Masa.Blazor" Version="0.5.0-preview.3" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.5" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Extensions\" />
   </ItemGroup>
 
   <ItemGroup>
