添加环境配置文件加载；

--- a/src/Dotnet9.Web/appsettings.json
+++ b/src/Dotnet9.Web/appsettings.json
@@ -9,7 +9,7 @@
   "Site": {
     "Domain": "https://dotnet9.com",
     "AssetsLocalPath": "F:\\github_gitee\\Assets.Dotnet9",
-    "AssetsRemotePath": "https://img1.dotnet9.com",
+    "AssetsRemotePath": "https://img1.dotnet9.com"
   },
   "Cache": {
     "IsRedis": true,
