--- a/src/Dotnet9.Web/Dotnet9.Web.csproj
+++ b/src/Dotnet9.Web/Dotnet9.Web.csproj
@@ -32,6 +32,7 @@
 
 	<ItemGroup>
 	  <PackageReference Include="Markdig" Version="0.30.2" />
+	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.7" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.7">
 	    <PrivateAssets>all</PrivateAssets>
 	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
