添加认证服务部分类；

--- a/src/Dotnet9-VNext/IdentityService.Domain/IdentityService.Domain.csproj
+++ b/src/Dotnet9-VNext/IdentityService.Domain/IdentityService.Domain.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="6.0.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Dotnet9.DomainCommons\Dotnet9.DomainCommons.csproj" />
+  </ItemGroup>
+
 </Project>
