添加认证服务web api项目；

--- a/.gitignore
+++ b/.gitignore
@@ -355,3 +355,4 @@ src/Dotnet9.Web/sitemap.xml
 src/Dotnet9.EntityFrameworkCore/Migrations/
 src/Dotnet9.Admin/package-lock.json
 src/Dotnet9.Admin/build/
+src/Dotnet9-VNext/IdentityService.WebAPI/appsettings.Development.json
