登录控制器编写完；

--- a/src/Dotnet9-VNext/IdentityService.WebAPI/IdentityService.WebAPI.csproj
+++ b/src/Dotnet9-VNext/IdentityService.WebAPI/IdentityService.WebAPI.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CommonInitializer\CommonInitializer.csproj" />
     <ProjectReference Include="..\IdentityService.Domain\IdentityService.Domain.csproj" />
     <ProjectReference Include="..\IdentityService.Infrastructure\IdentityService.Infrastructure.csproj" />
   </ItemGroup>
