认证服务添加事件总线相关代码；

--- a/src/Dotnet9-VNext/CommonInitializer/CommonInitializer.csproj
+++ b/src/Dotnet9-VNext/CommonInitializer/CommonInitializer.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Dotnet9.EventBus\Dotnet9.EventBus.csproj" />
+  </ItemGroup>
+
 </Project>
