添加配置数据库管理工程；
参考：https://github.com/yangzhongke/Zack.AnyDBConfigProvider

--- a/src/Dotnet9-VNext/CommonInitializer/CommonInitializer.csproj
+++ b/src/Dotnet9-VNext/CommonInitializer/CommonInitializer.csproj
@@ -8,9 +8,11 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.1.2" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.0-preview.6" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Dotnet9.AnyDBConfigProvider\Dotnet9.AnyDBConfigProvider.csproj" />
     <ProjectReference Include="..\Dotnet9.EventBus\Dotnet9.EventBus.csproj" />
   </ItemGroup>
 
