规范解决方案文件夹首字母大写；

--- a/src/Dotnet9.Core.Test/Dotnet9.Core.Test.csproj
+++ b/src/Dotnet9.Core.Test/Dotnet9.Core.Test.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Dotnet9.Core\Dotnet9.Core.csproj" />
+    <ProjectReference Include="..\Dotnet9.Core\Dotnet9.Core.csproj" />
   </ItemGroup>
 
 </Project>
