开发和生产配置文件忽略提交git;

--- a/.gitignore
+++ b/.gitignore
@@ -357,3 +357,5 @@ src/Dotnet9.Admin/package-lock.json
 src/Dotnet9.Admin/build/
 src/Dotnet9-VNext/IdentityService.WebAPI/appsettings.Development.json
 src/admin/Dotnet9.WebAPI/appsettings.Development.json
+src/Dotnet9.WebAPI/appsettings.Development.json
+src/Dotnet9.WebAPI/appsettings.Production.json
