--- a/src/Dotnet9.WebAPI/appsettings.json
+++ b/src/Dotnet9.WebAPI/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "DefaultDB": {
+    "DbType": "PostgreSQL",
+    "ConnectionString": "Host=[ip];Username=postgres;Database=dotnet9;port=5432;password=[password];"
+  },
   "AllowedHosts": "*"
 }
