程序编译通过，提交代码修改；

--- a/src/Dotnet9.WebAPI/appsettings.json
+++ b/src/Dotnet9.WebAPI/appsettings.json
@@ -9,5 +9,21 @@
     "DbType": "PostgreSQL",
     "ConnectionString": "Host=[ip];Username=postgres;Database=dotnet9;port=5432;password=[password];"
   },
+  "JWT": {
+    "Audience": "dotnet9",
+    "Issuer": "dotnet9",
+    "Key": "JWTAuthentica123456GHsecuredPasswordVVVp1OH7Xzyr",
+    "ExpireSeconds": 1800
+  },
+  "RabbitMQ": {
+    "HostName": "127.0.0.1",
+    "ExchangeName": "Dotnet9"
+  },
+  "Redis": {
+    "ConnectionString": "127.0.0.1:6379,password=,connectTimeout=4000,connectRetry=1,syncTimeout=1000"
+  },
+  "Cors": {
+    "Origins": []
+  },
   "AllowedHosts": "*"
 }
