基础工程注册成功，接口可正常调用；

--- a/.gitignore
+++ b/.gitignore
@@ -359,3 +359,4 @@ src/Dotnet9-VNext/IdentityService.WebAPI/appsettings.Development.json
 src/admin/Dotnet9.WebAPI/appsettings.Development.json
 src/Dotnet9.WebAPI/appsettings.Development.json
 src/Dotnet9.WebAPI/appsettings.Production.json
+src/Dotnet9.WebAPI.Infrastructure/Migrations/
