--- a/src/Dotnet9.WebAPI.Infrastructure/Dotnet9.WebAPI.Infrastructure.csproj
+++ b/src/Dotnet9.WebAPI.Infrastructure/Dotnet9.WebAPI.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.8" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.6" />
   </ItemGroup>
 
   <ItemGroup>
