--- a/src/Dotnet9.DomainCommons/Dotnet9.DomainCommons.csproj
+++ b/src/Dotnet9.DomainCommons/Dotnet9.DomainCommons.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Dotnet9.Core\Dotnet9.Core.csproj" />
+  </ItemGroup>
+
 </Project>
