个性化定制；

--- a/src/Dotnet9.Admin.React/src/manifest.json
+++ b/src/Dotnet9.Admin.React/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Ant Design Pro",
-  "short_name": "Ant Design Pro",
+  "name": "Dotnet9",
+  "short_name": "Dotnet9",
   "display": "standalone",
   "start_url": "./?utm_source=homescreen",
   "theme_color": "#002140",
