.net降级（.net 6，.net 7 rc1部分nuget包未同步更新，不稳定）；

--- a/src/Dotnet9.Infrastructure/Dotnet9.Infrastructure.csproj
+++ b/src/Dotnet9.Infrastructure/Dotnet9.Infrastructure.csproj
@@ -2,7 +2,7 @@
 
 	<ItemGroup>
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.0-rc.1.22426.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.9" />
     <PackageReference Include="RedLock.net" Version="2.3.2" />
   </ItemGroup>
 
