--- a/src/Dotnet9.AnyDBConfigProvider/Dotnet9.AnyDBConfigProvider.csproj
+++ b/src/Dotnet9.AnyDBConfigProvider/Dotnet9.AnyDBConfigProvider.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0-rc.1.22426.10" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
   </ItemGroup>
 
 </Project>
