--- a/src/Dotnet9.CommonInitializer/Dotnet9.CommonInitializer.csproj
+++ b/src/Dotnet9.CommonInitializer/Dotnet9.CommonInitializer.csproj
@@ -2,8 +2,8 @@
 
 	<ItemGroup>
 		<PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
-		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.0-preview.7" />
-		<PackageReference Include="Serilog.AspNetCore" Version="6.1.0-dev-00281" />
+		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.6" />
+		<PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
 	</ItemGroup>
 
 	<ItemGroup>
